##Text encoding: utf-8

2006-07-28 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Fixed a bug in the -d|--display3d
	option description. Added cross-references for the GTK and GNOME
	options. Some XML clean-up.
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1.xml: Ditto.
	* docs/man/libgcu.3.xml: Ditto.
	* docs/man/gchem3d-viewer.1: Updated from source.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.

2006-07-28  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Fixed Header.
	(OPTIONS): Cosmetic changes. More general description of the --help-*
	option(s).
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1.xml: Fixed Header.
	* docs/man/libgcu.3.xml: Ditto.
	* docs/man/gchem3d-viewer.1: Updated.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.
	* docs/man/libgcu.3: Ditto.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/libgcu.3: Updated from last XML source.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/libgcu.3.xml: Small change to get the same headers *.1
	provide.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1: Updated from last XML source.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchemcalc.1.xml: Added more information about the program,
	completing the options section.
	* docs/man/gchemtable.1.xml: Ditto.

2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Added more information about the
	program, completing the options section.

2006-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed mozilla-config use (thanks to Pav Lucistnik).
	
2006-05-08  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* programs/gchem3d-viewer.c: Fixed a compilation warning using a
	typecast.
