@@ -1,11 +1,11 @@
 .\"     Title: gchem3d\-viewer
 .\"    Author: Daniel Leidert <daniel.leidert@wgdd.de>
 .\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
-.\"      Date: $Date: 2006-08-15 00:37:57 $
+.\"      Date: $Date: 2006-08-15 00:45:37 $
 .\"    Manual: gnome\-chemistry\-utils
 .\"    Source: gcu 0.6.2
 .\"
-.TH "GCHEM3D\-VIEWER" "1" "$Date: 2006-08-15 00:37:57 $" "gcu 0.6.2" "gnome\-chemistry\-utils"
+.TH "GCHEM3D\-VIEWER" "1" "$Date: 2006-08-15 00:45:37 $" "gcu 0.6.2" "gnome\-chemistry\-utils"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -41,7 +41,7 @@ can be one of
 .PP
 \fB\-?\fR, \fB\-\-help\fR
 .RS 3n
-Show help options.
+Show application help options.
 .RE
 .PP
 \fB\-\-help\-all\fR, \fB\-\-help\-*\fR
