@@ -5,7 +5,7 @@
 	"/usr/share/xml/docbook/schema/dtd/4.4/docbookx.dtd" [
 
 <!--
-	$Id: gchem3d-viewer.1.xml,v 1.1.2.5 2006-08-15 00:37:57 dleidert Exp $
+	$Id: gchem3d-viewer.1.xml,v 1.1.2.6 2006-08-15 00:45:37 dleidert Exp $
 
   Copyright (C) 2004-2006 Daniel Leidert <daniel.leidert@wgdd.de>.
 
@@ -27,7 +27,7 @@
 	<!ENTITY dhpackage    "gchem3d-viewer">
 	<!ENTITY dhulapackage "gcu">
 
-	<!ENTITY dhdate       "$Date: 2006-08-15 00:37:57 $">
+	<!ENTITY dhdate       "$Date: 2006-08-15 00:45:37 $">
 	<!ENTITY dhsection    "1">
 
 	<!ENTITY % _gcu_entities SYSTEM "gcu_entities.dtd">
@@ -100,7 +100,7 @@
 				<term><option>-?</option></term>
 				<term><option>--help</option></term>
 				<listitem>
-					<para>Show help options.</para>
+					<para>Show application help options.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
