@@ -1,11 +1,11 @@
 .\"     Title: libgcu
 .\"    Author: Daniel Leidert <daniel.leidert@wgdd.de>
 .\" Generator: DocBook XSL Stylesheets v1.70.1 <http://docbook.sf.net/>
-.\"      Date: $Date: 2006-07-28 01:03:20 $
+.\"      Date: $Date: 2006-08-15 00:45:37 $
 .\"    Manual: gnome\-chemistry\-utils
 .\"    Source: gcu 0.6.2
 .\"
-.TH "LIBGCU" "3" "$Date: 2006-07-28 01:03:20 $" "gcu 0.6.2" "gnome\-chemistry\-utils"
+.TH "LIBGCU" "3" "$Date: 2006-08-15 00:45:37 $" "gcu 0.6.2" "gnome\-chemistry\-utils"
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -36,7 +36,7 @@ shared library
 .PP
 The complete reference with examples is available online at
 \fI\%http://www.nongnu.org/gchemutils/reference/\fR
-or (depending on your distribution) also locally at
+or (depending on your installation) also locally at
 \fI${datadir}/doc/gchemutils/reference\fR.
 .SH "AUTHOR"
 .PP
